# Rust-libstq-backend

acl/: Cargo.toml
acl/src/: lib.rs
api/: Cargo.toml
api/src/: errors.rs  lib.rs  orders.rs  pages.rs  roles.rs  rpc_client.rs  types.rs  util.rs  warehouses.rs
cache/: Cargo.toml  docker-compose.yml
cache/src/: lib.rs
cache/src/cache/: in_memory.rs  mod.rs  null.rs  redis.rs  typed.rs
cache/tests/: redis_cache.rs
db/: Cargo.toml
db/src/: connection.rs  diesel_repo.rs  lib.rs  pool.rs  repo.rs  sequence.rs  statement.rs
diesel_macro_derive/: Cargo.toml
diesel_macro_derive/src/: lib.rs
http/: Cargo.toml
http/src/: controller.rs  errors.rs  lib.rs  query_util.rs  request_util.rs  system.rs
http/src/client/: mod.rs  time_limited.rs  with_headers.rs
logging/: Cargo.toml
logging/src/: lib.rs
roles/: Cargo.toml
roles/src/: lib.rs  models.rs  repo.rs  routing.rs  service.rs
router/: Cargo.toml
router/src/: lib.rs
routes/: Cargo.toml
routes/src/: lib.rs  model.rs  role.rs  service.rs
static_resources/: Cargo.toml
static_resources/src/: attribute_type.rs  committer_role.rs  currency.rs  currency_type.rs  devices.rs  emails.rs  gender.rs  language.rs  lib.rs  moderation_status.rs  order_status.rs  project.rs  provider.rs  token_type.rs
types/: Cargo.toml
types/src/: enums.rs  lib.rs  newtypes.rs  structs.rs
