[package]
name = "stq_http"
version = "0.1.0"

[dependencies]
failure = "0.1"
futures = "0.1"
hyper = "0.11"
hyper-tls = { git = "https://github.com/storiqateam/hyper-tls", rev = "f71d7dc50dcc916f16e83b6b612b259c456b2646" }
juniper = "0.9"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
tokio-timer = "0.2"
validator = "0.6"
chrono = "0.4"
