[package]
name = "stq_static_resources"
version = "0.1.0"

[dependencies]
diesel = { version = "1.3.3", features = ["postgres", "extras"] }
isolang = "0.2"
juniper = "0.9.2"
postgres = { git = "https://github.com/StoriqaTeam/rust-postgres" }
postgres-protocol = { git = "https://github.com/StoriqaTeam/rust-postgres" }
serde = "1.0"
serde_derive = "1.0"
stq_diesel_macro_derive = { path = "../diesel_macro_derive" }
enum-iter = { git = "https://github.com/StoriqaTeam/enum-iter" }
